--- a/index.html
+++ b/index.html
@@ -41,20 +41,36 @@
   <div class="line_7">
   </div>
 
+<div class="img-grid-1">
   <div class="img1">
     <img src="images/cercles.svg" alt="cercles">
   </div>
+</div>
 
   <div class="bloc_2">
     <a href="about.html"><div class="about">
         <h2>About.</h2>
     </div></a>
   </div>
-  <div class="bloc_3">
-    <a href="contact.html"><div class="contact">
-        <h2>Contact.</h2></a>
+
+  <div class="img-grid-2">
+    <div class="img2">
+      <img src="images/post.svg" alt="lignes ondulées">
     </div>
   </div>
+
+  <div class="bloc_3">
+    <a href="contact.html"><div class="contact">
+        <h2>Contact.</h2>
+    </div></a>
+  </div>
+
+  <div class="img-grid-3">
+    <div class="img1">
+      <img src="images/etoile.svg" alt="étoile">
+    </div>
+  </div>
+
   <div class="bloc_4">
     <div class="square_1">
     </div>
