--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
     <div class="square_2">
     </div>
   </div>
+  <div class="bloc_6">
+    <div class="square_3">
+    </div>
+  </div>
 
 </div>
   </body>
