--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
     </div>
   </div>
 
+<div class="footer">
+<img src="images/instagram.svg" alt="icône instagram">
+<img src="images/linkedin.svg" alt="icône linkedIn">
 </div>
+
+</div>
+
   </body>
 </html>
