--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
   </div>
 
 <div class="footer">
-<img src="images/instagram.svg" alt="icône instagram">
-<img src="images/linkedin.svg" alt="icône linkedIn">
+<a href="https://www.instagram.com/savoia.laurie/"><img src="images/instagram.png" alt="icône instagram"></a>
+<a href="https://www.linkedin.com/in/laurie-savoia-graphicdesign/"><img src="images/linkedin.png" alt="icône linkedIn"></a>
 </div>
 
 </div>
