--- a/index.html
+++ b/index.html
@@ -1,95 +1,104 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Laurie Savoia</title>
-    <link rel="stylesheet" href="styles/main.css">
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Laurie Savoia</title>
+  <link rel="stylesheet" href="styles/main.css">
+</head>
+
+<body>
 
 
-<div class="container">
+  <div class="container">
 
-<div class="titre">
-  <div class="laurie">
-    <h1>LAURIE</h1>
-  </div>
-<div class="savoia">
-<h1>SAVOIA</h1>
-</div>
-</div>
-
-
-  <div class="bloc_1">
-    <a href="work.html"><div class="work">
-        <h2>Work.</h2>
-    </div></a>
-  </div>
-
-  <div class="line_1">
-  </div>
-  <div class="line_2">
-  </div>
-  <div class="line_3">
-  </div>
-  <div class="line_4">
-  </div>
-  <div class="line_5">
-  </div>
-  <div class="line_6">
-  </div>
-  <div class="line_7">
-  </div>
-
-<div class="img-grid-1">
-  <div class="img1">
-    <img src="images/cercles.svg" alt="cercles">
-  </div>
-</div>
-
-  <div class="bloc_2">
-    <a href="about.html"><div class="about">
-        <h2>About.</h2>
-    </div></a>
-  </div>
-
-  <div class="img-grid-2">
-    <div class="img2">
-      <img src="images/post.svg" alt="lignes ondulées">
+    <div class="titre">
+      <div class="laurie">
+        <h1>LAURIE</h1>
+      </div>
+      <div class="savoia">
+        <h1>SAVOIA</h1>
+      </div>
     </div>
-  </div>
 
-  <div class="bloc_3">
-    <a href="contact.html"><div class="contact">
-        <h2>Contact.</h2>
-    </div></a>
-  </div>
 
-  <div class="img-grid-3">
-    <div class="img1">
-      <img src="images/etoile.svg" alt="étoile">
+    <div class="bloc_1">
+      <a href="work.html">
+        <div class="work">
+          <h2>Works.</h2>
+        </div>
+      </a>
     </div>
-  </div>
 
-  <div class="bloc_4">
-    <div class="square_1">
+    <div class="line_1">
     </div>
-  </div>
-  <div class="bloc_5">
-    <div class="square_2">
+    <div class="line_2">
     </div>
-  </div>
-  <div class="bloc_6">
-    <div class="square_3">
+    <div class="line_3">
     </div>
+    <div class="line_4">
+    </div>
+    <div class="line_5">
+    </div>
+    <div class="line_6">
+    </div>
+    <div class="line_7">
+    </div>
+
+    <div class="img-grid-1">
+      <div class="img1">
+        <img src="images/cercles.svg" alt="cercles">
+      </div>
+    </div>
+
+    <div class="bloc_2">
+      <a href="about.html">
+        <div class="about">
+          <h2>About.</h2>
+        </div>
+      </a>
+    </div>
+
+    <div class="img-grid-2">
+      <div class="img2">
+        <img src="images/post.svg" alt="lignes ondulées">
+      </div>
+    </div>
+
+    <div class="bloc_3">
+      <a href="contact.html">
+        <div class="contact">
+          <h2>Contact.</h2>
+        </div>
+      </a>
+    </div>
+
+    <div class="img-grid-3">
+      <div class="img1">
+        <img src="images/etoile.svg" alt="étoile">
+      </div>
+    </div>
+
+    <div class="bloc_4">
+      <div class="square_1">
+      </div>
+    </div>
+    <div class="bloc_5">
+      <div class="square_2">
+      </div>
+    </div>
+    <div class="bloc_6">
+      <div class="square_3">
+      </div>
+    </div>
+
+    <div class="footer">
+      <a href="https://www.instagram.com/savoia.laurie/"><img src="images/instagram.png" alt="icône instagram"></a>
+      <a href="https://www.linkedin.com/in/laurie-savoia-graphicdesign/"><img src="images/linkedin.png" alt="icône linkedIn"></a>
+    </div>
+
   </div>
 
-<div class="footer">
-<a href="https://www.instagram.com/savoia.laurie/"><img src="images/instagram.png" alt="icône instagram"></a>
-<a href="https://www.linkedin.com/in/laurie-savoia-graphicdesign/"><img src="images/linkedin.png" alt="icône linkedIn"></a>
-</div>
+</body>
 
-</div>
-
-  </body>
 </html>
