--- a/work.html
+++ b/work.html
@@ -56,6 +56,24 @@
       <a href="carson.html"><img src="images/5-carson.jpg" alt="carson'way visual"></a>
     </div>
 
+    <div class="img-grid-4">
+      <div class="img2">
+        <img src="images/post.svg" alt="lignes ondulées">
+      </div>
+    </div>
+
+    <div class="img-grid-5">
+      <div class="img1">
+        <img src="images/cercles.svg" alt="cercles">
+      </div>
+    </div>
+
+    <div class="img-grid-6">
+      <div class="img1">
+        <img src="images/etoile.svg" alt="étoile">
+      </div>
+    </div>
+
     <div class="footer_works">
       <a href="https://www.instagram.com/savoia.laurie/"><img src="images/instagram.png" alt="icône instagram"></a>
       <a href="https://www.linkedin.com/in/laurie-savoia-graphicdesign/"><img src="images/linkedin.png" alt="icône linkedIn"></a>
