--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 
     <div class="bloc_1">
-      <a href="work.html">
-        <div class="work">
+      <a href="works.html">
+        <div class="works">
           <h2>Works.</h2>
         </div>
       </a>
