global campaign and linocut pages

--- a/works.html
+++ b/works.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="agatha">
-      <a href="agatha.html"><img src="images/2-motif_agatha.jpg" alt="motif de formes colorées sur fond bleu"></a>
+      <a href="global-campaign.html"><img src="images/2-motif_agatha.jpg" alt="motif de formes colorées sur fond bleu"></a>
     </div>
 
     <div class="linocut">
