responsive atelier + linocut

--- a/linocut.html
+++ b/linocut.html
@@ -19,19 +19,19 @@
         </div>
 
 
-        <div class="line_15">
+        <div class="line_1">
         </div>
-        <div class="line_16">
+        <div class="line_2">
         </div>
-        <div class="line_17">
+        <div class="line_3">
         </div>
-        <div class="line_18">
+        <div class="line_4">
         </div>
-        <div class="line_19">
+        <div class="line_5">
         </div>
-        <div class="line_20">
+        <div class="line_6">
         </div>
-        <div class="line_21">
+        <div class="line_7">
         </div>
 
 
@@ -58,7 +58,7 @@
         </div>
       </div>
 
-      <div class="footer_atelier">
+      <div class="footer">
         <a href="https://www.instagram.com/savoia.laurie/"><img src="images/instagram.png" alt="icône instagram"></a>
         <a href="https://www.linkedin.com/in/laurie-savoia-graphicdesign/"><img src="images/linkedin.png" alt="icône linkedIn"></a>
       </div>
