--- a/identity.html
+++ b/identity.html
@@ -21,19 +21,19 @@
     </div>
 
 
-    <div class="line_15">
+    <div class="line_1">
     </div>
-    <div class="line_16">
+    <div class="line_2">
     </div>
-    <div class="line_17">
+    <div class="line_3">
     </div>
-    <div class="line_18">
+    <div class="line_4">
     </div>
-    <div class="line_19">
+    <div class="line_5">
     </div>
-    <div class="line_20">
+    <div class="line_6">
     </div>
-    <div class="line_21">
+    <div class="line_7">
     </div>
 
     <div class="img-grid-7">
@@ -59,7 +59,7 @@
   <img src="images/3-atelier-s.jpg" alt="">
 </div>
 
-  <div class="footer_atelier">
+  <div class="footer">
     <a href="https://www.instagram.com/savoia.laurie/"><img src="images/instagram.png" alt="icône instagram"></a>
     <a href="https://www.linkedin.com/in/laurie-savoia-graphicdesign/"><img src="images/linkedin.png" alt="icône linkedIn"></a>
   </div>
