pages carson et flatdesign

--- a/works.html
+++ b/works.html
@@ -36,24 +36,32 @@
     <div class="line_14">
     </div>
 
+
+
     <div class="atelier-s">
       <a href="identity.html"><img src="images/1-atelier-s.jpg" alt="business cards atelier S"></a>
+          <p>Identity</p>
     </div>
+
 
     <div class="agatha">
       <a href="global-campaign.html"><img src="images/2-motif_agatha.jpg" alt="motif de formes colorées sur fond bleu"></a>
+        <p>Global Campaign</p>
     </div>
 
     <div class="linocut">
       <a href="linocut.html"><img src="images/3-linocut.png" alt="linocut of an illustration called ZZtop"></a>
+      <p>Linocut</p>
     </div>
 
     <div class="flatdesign">
       <a href="flatdesign.html"><img src="images/4-flatdesign.png" alt="illustration of a girl in a cavern"></a>
+      <p>Flatdesign</p>
     </div>
 
     <div class="carson">
       <a href="carson.html"><img src="images/5-carson.jpg" alt="carson'way visual"></a>
+      <p>Layout</p>
     </div>
 
     <div class="img-grid-4">
